--- a/QUESTION 2.ipynb
+++ b/QUESTION 2.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "4              4  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,16 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a13494a20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a13c26978>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -433,6 +433,30 @@
    ],
    "source": [
     "sns.scatterplot(\"Bipolar_index\", \"PANSS_Total\", data=x, hue=\"cluster\", palette=\"Accent\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    871\n",
+       "2    806\n",
+       "3    735\n",
+       "4    588\n",
+       "Name: cluster, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[\"cluster\"].value_counts()"
    ]
   },
   {
